# simular.cherry

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.py  build.sh  run.py
benchmarks/: CMakeLists.txt
benchmarks/lex/: comment.cpp  keyword.cpp
benchmarks/syn/: import.cpp  type.cpp
docs/: reference.md
include/cherry/: cherry.hpp
samples/: build.cherry  hello.cherry
source/: CMakeLists.txt  common.hpp  entry.cpp  grammar.hpp  kernel.hpp  lexer.hpp  parser.hpp  types.hpp
source/ast/: alias.hpp  document.hpp  enumeration.hpp  expression.hpp  extension.hpp  function.hpp  import.hpp  module.hpp  node.hpp  object.hpp  paths.hpp  type.hpp  variable.hpp
source/lex/: binary.hpp  character.hpp  comment.hpp  decimal.hpp  detail.hpp  error.hpp  hexadecimal.hpp  keyword.hpp  leaf.hpp  octal.hpp  operator.hpp  state.hpp  string.hpp  token.hpp
source/syn/: import.hpp  module.hpp  paths.hpp  type.hpp  type.tcc
tests/: CMakeLists.txt
tests/lex/: binary.cpp  character.cpp  comment.cpp  decimal.cpp  hexadecimal.cpp  keyword.cpp  lexer.cpp  octal.cpp  operator.cpp  state.cpp  string.cpp
tests/syn/: grammar.cpp  import.cpp  paths.cpp  type.cpp
